Rydd ubrukt felt i SakslisteDto + recordify